Overlapping tables fixed

--- a/index.css
+++ b/index.css
@@ -195,7 +195,7 @@ th, td {
 }
 
 #myTable td{
-  width: 32px;
+  width: 25px;
 }
 
 #myTable{
